--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>draw</artifactId>
 	<name>draw</name>
 	<packaging>war</packaging>
-	<version>1.0.0</version>
+	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		
 		<java-version>1.6</java-version>
@@ -36,6 +36,8 @@
 
 		<!-- Logging -->
 		<logback.version>1.1.3</logback.version>
+		
+		<jcl-over-slf4j.version>1.7.7</jcl-over-slf4j.version>
 
 		<!-- jackson -->
 		<jackson.version>2.6.3</jackson.version>
@@ -83,6 +85,12 @@
 					<artifactId>commons-logging</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${jcl-over-slf4j.version}</version>
 		</dependency>
 
 		<dependency>
@@ -179,8 +187,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>${java-version}</source>
+                    <target>${java-version}</target>
                     <compilerArgument>-Xlint:all</compilerArgument>
                     <showWarnings>true</showWarnings>
                     <showDeprecation>true</showDeprecation>
