--- a/pom.xml
+++ b/pom.xml
@@ -51,9 +51,20 @@
 		<!-- Test -->
 		<junit.version>4.12</junit.version>
 		
+		<aspectj.version>1.8.8</aspectj.version>
+		
+		<cglib.version>3.2.0</cglib.version>
+		
 	</properties>
+	
 	<dependencies>
 	
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>${cglib.version}</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
@@ -111,6 +122,18 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
 			<version>${spring-framework.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjrt</artifactId>
+			<version>${aspectj.version}</version>
+		</dependency>
+	
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>${aspectj.version}</version>
 		</dependency>
 
 		<dependency>
