--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 #mysql
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://139.196.183.219:3306/draw?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://localhost:3306/draw?useUnicode=true&amp;characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=root
